change Arrays.asList to List.of